showed action button on forgot password using altenative way instead of navigate

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -32,7 +32,7 @@ forgot:
   steps:
     - enter_email
     - check_otp: { url: /user/check_otp, clear: true }
-    - update_password
+    - update_password: {prev: false}
 
 enter_email:
   name: Registered email
@@ -54,6 +54,8 @@ update_password:
     - type: password_input
     - password
     - confirm_password
+  actions:
+    - update_password
   post:
     - read_session: email
     - sql_exec: >
