--- a/user.yml
+++ b/user.yml
@@ -292,12 +292,12 @@ login:
     - sql_values: |
         select u.id uid, partner pid, u.email user_email, first_name user_first_name, last_name user_last_name,
           concat(first_name, ' ', last_name) user_full_name,
-          u.cellphone, roles, groups,  ifnull(start_page,'home') start_page
+          u.cellphone user_cellphone, roles, groups,  ifnull(start_page,'home') start_page
         from user u join person p on u.person = p.id
         where u.email='$email'
     - load_lineage: [roles,role,code,base_code]
     - sql_exec: update user set attempts = 0 where id = $uid
-    - write_session: uid,pid,roles,user_email,user_first_name,user_last_name,user_full_name,cellphone
+    - write_session: uid,pid,roles,user_email,user_first_name,user_last_name,user_full_name,user_cellphone
     - close_dialog
     - redirect: /$start_page
 
