--- a/controls.yml
+++ b/controls.yml
@@ -619,7 +619,7 @@ label_inside:
     class: [input]
     width: 100%
     derive: [label]
-    attr: { placeholder: $label, title: $desc, for: $id }
+    attr: { placeholder: $label, title: $desc}
   text: $field
 
 labelled_inside:
