--- a/model_sample.yml
+++ b/model_sample.yml
@@ -1,6 +1,6 @@
 test:
   desc: Test model binding/watching
-  on_load: $@moves = 0; $@color='red'; $@colors = ['red','orange','yellow','green','blue','indigo','violet']
+  on_load: <didi moves = 0; color='red'; colors = ['red','orange','yellow','green','blue','indigo','violet']>
   type: input_page
   inputs:
     # - template: none
@@ -9,19 +9,22 @@ test:
     - type: radiobox
     - switched: { name: "On", value: 1 }
     - switched: { name: "Off", value: 0 }
-    - string_test: { type: p, text:  $@color + " " + $@checked + " " + $@switched  }
+    - string_test:
+        type: p
+        # text: `"color " + color + " checked " + checked + " switched " + switched`
+        text: color <dd color> checked <d checked>switched <d switched>
+
     - type: input
     - style_test:
         style:
-          background-color: $@color
-          color: $@colors[($@colors.indexOf($@color)+4) % $@colors.length]
-        value: >
-          "You chose " + $@color
-        on_mousemove: $@moves = $@moves+1
-    - show_test: { show: $@checked }
+          background-color: <dd color>
+          # color: `colors[(color.indexOf(color)+4) % colors.length]`
+        value: You chose <d color>
+        on_mousemove: <dd moves = moves+1>
+    - show_test: { show: <d checked> }
     - checked_and_switched:
-        disabled: $@checked && $@switched
-        value: $@moves
+        disabled: <d checked && switched>
+        # value: `moves`
 
 
 
