--- a/isearch.yml
+++ b/isearch.yml
@@ -40,6 +40,7 @@ isearch:
     styles: [scroll_y,widest]
     height: auto
     show: no
+    autoload: 10
   option:
     tag: a
     class: [isearch,option]
