ensure datetimepicker css is loaded on datetime control

--- a/controls.yml
+++ b/controls.yml
@@ -157,6 +157,7 @@ datetime:
   type: input
   create: datetimepicker
   script: [/common/jquery.datetimepicker.js]
+  css: [/common/jquery.datetimepicker.css]
   format: Y-m-d H:i
   validateOnBlur: false
   allowBlanks: false
